2010-04-12 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic/libsdcc/*.[cS], device/lib/pic/*.[cS]:
	  sdcc library license changed to GPL+LE

2010-04-11 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/configure.in:
	  define CXXFLAGS
	* device/lib/pic/libm/expf.c:
	  corrected typo
	* device/include/mcs51/uPSD32xx.h:
	  sdcc library license changed to GPL+LE

2010-04-10 Borut Razem <borut.razem AT siol.net>

	* support/regression/ports/host/spec.mk.in:
	  reverted change made 2010-04-08, since the include is needed by
	  the libmullong.c regression test
	* device/lib/pic/libm/*.c:
	  sdcc library license changed to GPL+LE

2010-04-09 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51/msm8xc154s.h:
	  sdcc library license changed to GPL+LE

2010-04-08 Philipp Klaus Krause <pkk AT spth.de>
	* support/regression/tests/bug-2982135.c:
	  Fixed a stupid mistake.

2010-04-08 Borut Razem <borut.razem AT siol.net>

	* support/regressuin/test/bitvars.c:
	  fixed failing test on on Solaris i386 SunPro C compiler;
	  it behaves differently if -xO2 option is set or not
	* src/SDCCast.c, src/SDCCast.h:
	  fixed SunPro C warning: anonymous struct declaration
	* device/include/mcs51/C8051F336.h, device/include/mcs51/C8051T610.h,
	  device/include/mcs51/p89lpc938.h, device/include/mcs51/C8051F920.h,
	  device/include/mcs51/C8051T600.h, device/include/mcs51/C8051T630.h,
	  sdcc/device/include/hc08/mc68hc908qy.h, device/include/hc08/mc68hc908gp32.h:
	  sdcc library license changed to GPL+LE
	* support/regression/ports/host/spec.mk.in: removed unneeded include
	* sim/ucsim/cmd.src/Makefile.in:
	  sh test doesn't understand -e option
	* sim/ucsim/cmd.src/FlexLexer.h:
	  fixed warning about missing newline at last line

2010-04-07 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/ralloc.c,
	  support/regression/tests/bug-2982135.c:
	  Fixed bug #2982135.

2010-04-06 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c,
	  src/z80/peeph-z80.def