@@ -1,3 +1,9 @@
+2010-04-14 Borut Razem <borut.razem AT siol.net>
+
+	* sim/ucsim/configure, sim/ucsim/configure.in, sim/ucsim/ddconfig_in.h:
+	  fixed bug #2986676: ucz80 fails to run z80 regtests on Solaris
+	  SPARC platform
+
 2010-04-12 Borut Razem <borut.razem AT siol.net>
 
 	* device/lib/pic/libsdcc/*.[cS], device/lib/pic/*.[cS]:
